fix 3d page bottom toolbar cut off

--- a/src/pages/ThreeDModel.css
+++ b/src/pages/ThreeDModel.css
@@ -1,7 +1,7 @@
 .threed-page {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 56px);
+  height: 100%;
   overflow: hidden;
 }
 
